--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"emoji-mart": "^5.6.0",
 		"input-otp": "^1.4.1",
 		"jsonwebtoken": "^9.0.2",
